Major Changes before MP Short Course
Up to date as of 3/1/16

--- a/analyze.html
+++ b/analyze.html
@@ -256,6 +256,12 @@ Before applying a tool:
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
 Use the expand [+] button to learn more about this analyze step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
+<h4>Vancouver Island</h4>
+<p></p>
+<ul id="folio_scroller">
+<li><iframe width="600" height="300" src="https://www.youtube.com/embed/F5ZY-QtWkRM" frameborder="0" allowfullscreen></iframe></li>
+</ul> 
+<p></p><br>
 <h4>California</h4>
 The <a href="javascript:change('top.html', 'marine_invest.html')">InVEST coastal vulnerability model</a> was used to identify where coastal ecosystems reduce the number of people exposed to storms and future sea level rise along the California coast.  These areas were further analyzed at the county level to highlight which habitats play the biggest role in reducing numbers of people at risk and thus where to prioritize conservation of these ecosystems.  This early information provided local agencies with a process to better determine how their coasts and oceans can be managed more sustainably (<a href="docs/Langridge_etal_2014_OCM.pdf" target="_blank">Langridge et al. 2014</a>).  Additional InVEST models are now being applied to map the full suite of benefits provided by coastal-marine ecosystems, including recreation opportunities, scenic quality and watershed services.
 <p></p>
