--- a/communicate.html
+++ b/communicate.html
@@ -243,5 +243,11 @@ Based on three years of research and community engagement, the Center for Ocean 
 <li><span>The team contributed adaptation strategies to the 2014 Santa Cruz IRWM Plan.<br>(See "Chapter 15 - Climate Change")</span><a href="https://www.dropbox.com/s/1ufv7sf21fi5m3i/SC%20IRWMP%20Ch.15%20ClimateChange_2014-0721.pdf" target="_blank"><img alt="" src="img/communicate_ca_folio_3.png" /></a></li>
 </ul> 
 <p></p><br>
+<h4>British Columbia, Canada</h4>
+<p></p>
+<ul id="folio_scroller">
+<li><iframe width="600" height="300" src="https://www.youtube.com/embed/YtF4Pxw4j4E" frameborder="0" allowfullscreen></iframe></li>
+</ul> 
+<p></p>
 </body>
 </html>
