--- a/frame_old.html
+++ b/frame_old.html
@@ -11,32 +11,21 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-787904-11', 'auto');
   ga('send', 'pageview');
+  
+function change2()
+{
+parent.top_frame.location="top.html";
+parent.content.location="scenarios.html";
+} 
+  
 </script>
 </head>
+
 <body>
 <img src="img/logo_Concierge.png">
-<br><br>
-<ul id="menu-v">
-	<li><a href="welcome.html" target="content">Welcome</a>
-	</li>
-    <li><a href="scope.html" target="content">1. Scope</a>
-    </li>
-    <li><a href="data.html" target="content">2. Compile Data</a>
-    </li>
-    <li><a href="scenarios.html" target="content">3. Build Scenarios</a>
-    </li>
-    <li><a href="analyze.html" target="content">4. Analyze</a>
-    </li>
-    <li><a href="synthesize.html" target="content">5. Synthesize</a>
-    </li>
-    <li><a href="iterate.html" target="content">&#8596; Iterate &#8596;</a>
-    </li>
-    <li><a href="communicate.html" target="content">6. Reach Out</a>
-    </li>
-</ul>
-<br> 	
 <ul id="menu-v">
 	<li></li>
+	<li><a href="welcome.html" target="content">Home</a></li>
 	<li><a href="feedback.html" target="content">Feedback</a></li>
 	<li><a href="gallery.html" target="content">Gallery</a></li>
 	<li><a href="marine_invest.html" target="content">Marine InVEST</a></li>
