--- a/iterate.html
+++ b/iterate.html
@@ -215,8 +215,13 @@ The second iteration of the Informed Management scenario predicted a dramatic in
 <img alt="" src="img/iterate_bz_folio_2.png"></li>
 </ul>
 <p></p><br>
-<h4>Bahamas</h4>
-Coming soon
+<h4>The Bahamas</h4>
+As part of NatCap and TNC's spatial development planning for Andros Island, we co-developed scenarios and then analyzed how future distribution of human activities would affect habitats and the benefits they provide to people.  We visited Andros for three rounds of stakeholder consultations over one year. Sharing narratives and scenario maps helped garnering feedback on the type and location of future activities.  We used feedback from community members, along with outputs from the InVEST models, to revise the preferred scenario. After multiple iterations, model results indicated that a stakeholder-preferred scenario ("Sustainable Prosperity") maintained (or sometimes enhanced) important benefits from nature (e.g., fisheries, coastal protection, recreation and tourism).
+<p></p>
+<ul id="folio_scroller">
+<li><span>Katie Arkema explaining stakeholder visions of future scenarios for the Andros Island master plan to 12th graders from North Andros High School in The Bahamas</span>
+<img alt="" src="img/iterate_bh_folio_1.png"></li>
+</ul>
 <p></p><br>
 </body>
 </html>
