--- a/links.html
+++ b/links.html
@@ -158,7 +158,7 @@ window.onload = function (evt) {
 <img src="img/headers/links_sm.png" align="left"><h1>&nbsp;&nbsp;Links</h1>
 Use the expand [+] button to explore readings and other online resources for each marine planning step.
 <p></p>
-<h4>Cross-Cutting Steps</h4>
+<b>Cross-Cutting Steps</b>
 <ul>
 <li>Beck, M., et al. "Best practices for marine spatial planning." The Nature Conservancy, Arlington, VA (2009): 25. <a href="http://www.marineplanning.org/pdf/msp_best_practices.pdf" target="_blank">http://www.marineplanning.org/pdf/msp_best_practices.pdf</a></li>
 <li>Douvere, F. (2008). "The importance of marine spatial planning in advancing ecosystem-based sea use management." <i>Marine Policy</i>, 32(5), 762-771. <a href="docs/Douvere_etal_2008_MP.pdf" target="_blank">doi:10.1016/j.marpol.2008.03.021</a></li>
@@ -185,7 +185,7 @@ Use the expand [+] button to explore readings and other online resources for eac
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
 <li><a href="http://openchannels.org/" target="_blank">OpenChannels</a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
 <li><a href="http://marineecosystemservices.org/" target="_blank">Marine Ecosystem Services Partnership</a> - A searchable database of nearly 900 studies on marine ES valuation</li>
-<li><a href="http://bluesolutions.info/solutions/" target="_blank">Blue Solutions</a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
+<li><a href="http://www.solutionsexplorer.org" target="_blank">Blue Solutions</a> - A database, including our <a href="http://www.solutionsexplorer.org/solutions/mapping-and-valuing-ecosystem-services-for-integrated-management" target="_blank">Belize use-case</a>, of silutions to common coastal-marine challenges that are scalable and can be replicated</li>
 <li><a href="https://nicholas.duke.edu/del/upcoming-executive-education-courses/cmsp" target="_blank">CMSP Training Courses</a> - Free in-person and online training for coastal managers and marine planning practitioners</li>
 </ul>
 <div class="hr dotted clearfix">&nbsp;</div>
