--- a/reg_msp_data.html
+++ b/reg_msp_data.html
@@ -215,7 +215,20 @@ var geojson = {
             type: 'Point',
             coordinates: [-5, 55]
         }
-    },	
+    },
+	{
+        type: 'Feature',
+        properties: {
+            title: 'Darwin Plus Project: British Virgin Islands MPA and hydrographic survey capacity building',
+            'marker-color': '#19a9e5',
+            'marker-size': 'small',
+            url: 'http://tinyurl.com/DPLUS026'
+        },
+        geometry: {
+            type: 'Point',
+            coordinates: [-64.828754, 18.330853]
+        }
+    },		
 	{
         type: 'Feature',
         properties: {
