--- a/scenarios.html
+++ b/scenarios.html
@@ -256,5 +256,11 @@ In New England, our team is still in the relatively early, exploratory stages of
 <li><span>Final scenario descriptions and maps were used to assess future outcomes with InVEST (<a href="analyze.html"><b>Analyze</b></a> step)</span><img alt="" src="img/scenarios_bz_folio_4.png" /></a></li>
 </ul>
 <p></p><br>
+<h4>Vancouver Island</h4>
+<p></p>
+<ul id="folio_scroller">
+<li><iframe width="600" height="300" src="https://www.youtube.com/embed/FPxOXHxotIw" frameborder="0" allowfullscreen></iframe></li>
+</ul> 
+<p></p><br>
 </body>
 </html>
