--- a/scope.html
+++ b/scope.html
@@ -229,7 +229,7 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
 <li><a href="http://openchannels.org/" target="_blank">OpenChannels</a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
 <li><a href="http://marineecosystemservices.org/" target="_blank">Marine Ecosystem Services Partnership</a> - A searchable database of nearly 900 studies on marine ES valuation</li>
-<li><a href="http://bluesolutions.info/solutions/" target="_blank">Blue Solutions</a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
+<li><a href="http://www.solutionsexplorer.org" target="_blank">Blue Solutions</a> - A database, including our <a href="http://www.solutionsexplorer.org/solutions/mapping-and-valuing-ecosystem-services-for-integrated-management" target="_blank">Belize use-case</a>, of silutions to common coastal-marine challenges that are scalable and can be replicated</li>
 <li><a href="https://nicholas.duke.edu/del/upcoming-executive-education-courses/cmsp" target="_blank">CMSP Training Courses</a> - Free in-person and online training for coastal managers and marine planning practitioners</li>
 </ul>
 <p></p>
@@ -237,6 +237,12 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 <img src="img/headers/use-cases_sm.png" align="left"><h2>&nbsp;&nbsp;Use-Cases</h2>
 Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
+<h4>Vancouver Island</h4>
+<p></p>
+<ul id="folio_scroller">
+<li><iframe width="600" height="300" src="https://www.youtube.com/embed/HcaHk4q1ywk" frameborder="0" allowfullscreen></iframe></li>
+</ul> 
+<p></p><br>
 <h4>Barbados</h4>
 To aid in the development of a coastal management plan for Barbados, NatCap worked with key organizational partners to scope our work. As part of the scoping, we conducted a literature review and gap analysis. From this work and from conversations with key players in the region, we outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services. The project team then collected, reviewed, and synthesized available literature and spatial data. In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps. The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about priority ecosystem services in Barbados and the steps needed to complete a marine spatial plan.<p></p>
 <li><u>Geographic area</u>: <b>Barbados</b></li>
@@ -256,7 +262,7 @@ Our work in New England spans across multiple ecosystem service categories and p
 <li><u>Specific questions asked</u>: Where to site activities when there are overlapping uses in the ocean? How will fishing communities be impacted by shifting fish populations? Where are human activities impacting the provision of ecosystem services?</li>
 <li><u>Expected outcomes</u>: Replicable tools and methodologies for assessing visibility, changes in fish distribution, and the provision of ecosystem services across space. Research papers documenting these methods in the context of New England. New maps and data for consideration in regional marine planning, publicly hosted by NatCap or partners.</li>
 <p></p>
-<h4>Bahamas</h4>
+<h4>The Bahamas</h4>
 In the Bahamas, the Office of the Prime Minister (OPM) is working with the Natural Capital Project, the Inter-American Development Bank and The Nature Conservancy to design a master plan for Andros Island that will serve as a pilot for their national economic development planning.  Over the course of the next nine months, the partners will work in collaboration with key stakeholders on Andros Island to put forward a preferred master plan that will achieve multiple objectives such as enhancing and diversifying agriculture yield, increasing revenue from sport fishing, catch and revenue from local and domestic markets of crab and conch, respectively, and reducing damages and loss of life from coastal hurricanes.<p></p>
 <li><u>Geographic area</u>: <b>Andros Island, Bahamas</b></li>
 <li><u>Project team</u>: <b>Inter-American Development Bank, NatCap, TNC-Bahamas, Office of the Prime Minister, The Government of the Bahamas</b></li>
