--- a/synthesize.html
+++ b/synthesize.html
@@ -224,7 +224,7 @@ Other helpful off-ramps from InVEST include...
 <i>A: Try synthesizing results using methods or tools that are familiar and available to your team. We have found it helpful to synthesize InVEST results using a combination of GIS (ArcGIS or QGIS) and design software like Adobe Illustrator, Microsoft PowerPoint, or LibreOffice Impress. Languages like R or Python can also be used to produce synthetic visuals by those who are comfortable working in a coding environment. Do what works for you and be creative!</i><br>
 <p></p>
 <b>Q: How should I present results?</b><br>
-<i>A: Because the process of marine spatial planning relies on spatial information, maps are an obvious choice for communicating results, especially spatial differences throughout a region. However, maps can be difficult to synthesize and to compare. Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios. See our <a href="gallery.html"><b>Gallery</b></a> and Use-Cases for some communication examples.</i><br>
+<i>A: Because the process of marine spatial planning relies on spatial information, maps are an obvious choice for communicating results, especially spatial differences throughout a region. However, maps can be difficult to synthesize and to compare. Simple diagrams using arrows, bars, or graphs can help visualize ecosystem service synergies and trade-offs across scenarios. See our <a href="javascript:change('top.html', 'gallery.html')"><b>Gallery</b></a> and Use-Cases for some communication examples.</i><br>
 <p></p>
 <a name="links"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/links_sm.png" align="left"><h2>&nbsp;&nbsp;Links</h2>
