--- a/top_communicate.html
+++ b/top_communicate.html
@@ -45,6 +45,7 @@
       }
 	  
 	  
+	  
 	#primary_nav_wrap
 	{
 		margin-top:0px
@@ -54,7 +55,6 @@
 	{
 		list-style:none;
 		position:relative;
-		float:center;
 		margin:0;
 		padding:0
 	}
@@ -64,6 +64,8 @@
 		display:block;
 		color:#333;
 		text-decoration:none;
+		border-left: 1px solid #ececec;
+		border-bottom: 1px dashed #ececec;
 		font-weight:700;
 		font-size:12px;
 		line-height:32px;
@@ -96,6 +98,7 @@
 		position:absolute;
 		top:100%;
 		left:0;
+		float:center;
 		background:#fff;
 		padding:0
 	}
@@ -131,24 +134,23 @@
 	<nav id="primary_nav_wrap">
 	<ul>
 	<li class="current-menu-item"><a href="javascript:change('top.html', 'welcome.html')">MP Concierge Home</a></li>
-	<li><a href="javascript:change('top.html', 'feedback.html')">Feedback</a></li>
-	<li><a href="javascript:change('top.html', 'gallery.html')">Gallery</a></li>
+	<li><a href="javascript:change('top.html', 'links.html')">Links</a></li>
+	<li><a href="javascript:change('top.html', 'contact.html#use-cases')">Use-Cases</a></li>
 	<li><a href="javascript:change('top.html', 'marine_invest.html')">Marine InVEST</a></li>
 	<li><a href="javascript:change('top.html', 'iterate.html')">Iterate</a></li>
-	<li><a href="javascript:change('top.html', 'contact.html#use-cases')">Use-Cases</a></li>
-	<li><a href="javascript:change('top.html', 'links.html')">Links</a></li>
-	<li><a href="javascript:change('top.html', 'contact.html#acknowledgements')">Credits</a></li>
+	<li><a href="javascript:change('top.html', 'feedback.html')">Discussion</a></li>
+	<li><a href="javascript:change('top.html', 'gallery.html')">Gallery</a></li>
 	</nav>
 	<br>
 	<p></p>
 <img src="img/ribbon_communicate.png" align="left" usemap="#approach">	
 <map name="approach">
-  <area shape="circle" coords="159,30,24" href="javascript:change('top_scope.html', 'scope.html')">
-  <area shape="circle" coords="244,30,24" href="javascript:change('top_data.html', 'data.html')">
-  <area shape="circle" coords="326,30,24" href="javascript:change('top_scenarios.html', 'scenarios.html')">
-  <area shape="circle" coords="408,30,24" href="javascript:change('top_analyze.html', 'analyze.html')">
-  <area shape="circle" coords="488,30,24" href="javascript:change('top_synthesize.html', 'synthesize.html')">
-  <area shape="circle" coords="568,30,24" href="javascript:change('top_communicate.html', 'communicate.html')">
+  <area shape="circle" coords="159,33,24" href="javascript:change('top_scope.html', 'scope.html')">
+  <area shape="circle" coords="244,33,24" href="javascript:change('top_data.html', 'data.html')">
+  <area shape="circle" coords="326,33,24" href="javascript:change('top_scenarios.html', 'scenarios.html')">
+  <area shape="circle" coords="408,33,24" href="javascript:change('top_analyze.html', 'analyze.html')">
+  <area shape="circle" coords="488,33,24" href="javascript:change('top_synthesize.html', 'synthesize.html')">
+  <area shape="circle" coords="568,33,24" href="javascript:change('top_communicate.html', 'communicate.html')">
 </map>
   </body>
 </html>
