--- a/welcome.html
+++ b/welcome.html
@@ -39,8 +39,8 @@ background-color:#000000;
 margin:0px auto;
 width:40%;
 min-width:400px;
-min-height:200px;
-margin-top:8%;
+min-height:300px;
+margin-top:2%;
 text-align: center;
 -moz-border-radius: 50px 50px / 50px 50px;
 border-radius: 50px 50px / 50px 50px;
@@ -51,16 +51,16 @@ box-shadow: 5px 5px 5px #717171;
 font-size:26px;
 font-weight:bold;
 margin:10px;
-padding-top:20px;
+padding-top:0px;
 color:white;
 }
  
 .popup_img{
-margin:10px;
+margin:5px;
 }
  
 .popup_img_yes{
-margin:10px;
+margin:5px;
 }
  
 </style>
@@ -167,17 +167,21 @@ Learning about different marine planning projects can highlight methods and tool
 
 <div class="popup"> <!-- popup content start || copy this to the end of the file-->
         <div class="popupWindow">
+		        <div class="popup_img">
+                <img src="img/close.png" class="close"/>
+                </div>
                 <div class="popup_txt">News and Updates</div>
-                <font color="white">
+                <font color="white" size="10">
                 <i>January 2016</i>
                 <p></p>
-                Call for Abstracts: <a href="https://natcap2016.wordpress.com" target="_blank">2016 Natural Capital Symposium</a><br>
-            	<a href="javascript:change('top.html', 'feedback.html')">Feedback</a> in new discussion board<br>
-                Contribute to the <a href="javascript:change('top.html', 'gallery.html')">Gallery:</a> Upload your MP visuals</a>
+                -- Free Marine Planning Short Course --<br><a href="docs/NatCap_DEL_MarinePlanningShortCourse.pdf"  target="_blank">Released Date: April 6</a><p></p>
+				-- New Discussion Board --<br>
+            	<a href="javascript:change('top.html', 'feedback.html')">Leave us your Feedback</a>
+				<p></p>
+                -- Upload your MP visuals --<br>
+				<a href="javascript:change('top.html', 'gallery.html')">Contribute to the Gallery</a></a>
                 </font>
-                <div class="popup_img">
-                        <img src="img/close.png" class="close"/>
-                </div>
+
         </div>
 </div>  <!-- popup content ends -->
 </body>
