--- a/contact.html
+++ b/contact.html
@@ -80,12 +80,12 @@ Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Yi Xi, Doug Denu,
 Mike Papenfus, Jeremy Davies, Matt Marsik, Susan Langridge, and Mary Ruckelshaus</b>
 <p></p>
 We also thank our partners, without whom this work would not have been possible...<br>
-<b>World Wildlife Fund (WWF), The Nature Conservancy (TNC), West Coast Aquatics,Belize Coastal Zone Management Authority and Institute (CZMAI), Northeast Regional Ocean Council (NROC), Center for Ocean Solutions (COS), Downstream Strategies, Barbados Coastal Zone Management Unit (CZMU), Inter-American Development Bank (IDB), Healthy Reefs Initiative, National Oceanic and Atmospheric Administration (NOAA), and many others.</b>
+<b>World Wildlife Fund (WWF), The Nature Conservancy (TNC), Belize Coastal Zone Management Authority and Institute (CZMAI), West Coast Aquatics, Northeast Regional Ocean Council (NROC), Center for Ocean Solutions (COS), Downstream Strategies, Barbados Coastal Zone Management Unit (CZMU), Inter-American Development Bank (IDB), Healthy Reefs Initiative, National Oceanic and Atmospheric Administration (NOAA), and many others.</b>
 <p></p>
 Beta testing and design input were provided by...<br>
 <b>Amélie Augé, Jorge Ramirez, Britta Heine, Jan Kleine Büning, Brazilian Future Ocean Panel (PainelMar), Mike Barrett, Libby Whiting, Leo Dutra, Adam Kowalski, Holger Janssen, Anne Walton, Sushmita Majumdar, and Hedley Grantham</b>
 <p></p>
-This website was developed with support from the <b>Gordon and Betty Moore Foundation</b>.
+This website was developed with support from the <b>Gordon and Betty Moore Foundation</b>.<br>Marine habitat graphics courtesy of <b>Tracey Saxby</b>, Integration and Application Network, University of Maryland Center for Environmental Science (ian.umces.edu/imagelibrary/)
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
