--- a/site/msp_concierge_master/marine_invest.html
+++ b/site/msp_concierge_master/marine_invest.html
@@ -143,7 +143,7 @@ window.onload = function (evt) {
 <img src="img/logo_InVEST.jpg" align="left">InVEST is a suite of software models used to <b>map and value the goods and services from nature that sustain and fulfill human life</b>.  The toolkit can aid decision makers to assess quantified tradeoffs associated with alternative management choices and to identify areas where investment in natural capital can enhance human development and conservation.
 <p></p>
 Some of the models within InVEST can be applied for coastal-marine ecosystem assessment, planning and management.
-<b><a href="http://www.naturalcapitalproject.org/download.html" target="_blank">Click here</a></b> to download the latest version of InVEST.
+<b><a href="http://www.naturalcapitalproject.org/invest" target="_blank">Click here</a></b> to download the latest version of InVEST.
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Marine InVEST for MSP</h2>
