Disabling the popup on MSP concierge, per GV.

--- a/site/msp_concierge_master/welcome.html
+++ b/site/msp_concierge_master/welcome.html
@@ -164,22 +164,19 @@ Learning about different marine planning projects can highlight methods and tool
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
-
-<div class="popup"> <!-- popup content start || copy this to the end of the file-->
+<!-- popup content start || copy this to the end of the file
+<div class="popup"> 
         <div class="popupWindow">
 		        <div class="popup_img">
                 <img src="img/close.png" class="close"/>
                 </div>
                 <div class="popup_txt">News and Updates</div>
                 <font color="white" size="10">
-                <i>January 2016</i>
-                <p></p>
-                -- Free Marine Planning Short Course --<br><a href="docs/NatCap_DEL_MarinePlanningShortCourse.pdf"  target="_blank">Released Date: April 6</a><p></p>
-				-- New Discussion Board --<br>
-            	<a href="javascript:change('top.html', 'feedback.html')">Leave us your Feedback</a>
-				<p></p>
-                -- Upload your MP visuals --<br>
-				<a href="javascript:change('top.html', 'gallery.html')">Contribute to the Gallery</a></a>
+                <i>June 2016</i>
+                <p></p><br>
+                -- <a href="https://events.r20.constantcontact.com/register/eventReg?oeidk=a07ece41sxk807b7f6f&oseq=&c=&ch="  target="_blank">Register</a> for our free, self-paced online course --<br>Available: May - July 2016<p></p>
+				-- EBM Tools Network Webinar: Coastal Belize --<br>
+            	<a href="https://www.openchannels.org/webinars/2016/using-invest-coastal-zone-management-belize"  target="_blank">Video</a> of the June 7th presentation
                 </font>
 
         </div>
