Update Tradeoff page

--- a/msp_concierge_master/tradeoff.html
+++ b/msp_concierge_master/tradeoff.html
@@ -44,7 +44,7 @@ Tradeoff! is a series of mapping games developed by NatCap that simply introduce
 <li><a href="docs/BCB_ModeratorScript.pdf" target="_blank"><b>Moderator script</b></a> - Provides facilitators with an outline for introducing the game and explaining the rules</li>
 <li><a href="http://www.naturalcapitalproject.org/tradeoffbcb/game_nocv.htm" target="_blank"><b>Scoring calculator</b></a> - Compute team scores for Tradeoff: Best Coast Belize! Edition</li>
 <li>Verutes, Gregory M., and Amy Rosenthal. "Using simulation games to teach ecosystem service synergies and trade-offs." <i>Environmental Practice</i> 16.03 (2014): 194-204. doi: <a href="docs/Verutes_Rosenthal_2014_EP.pdf" target="_blank">http://dx.doi.org/10.1017/S1466046614000222</a></li>
-<p></p><i>Would you like to play Tradeoff! with your organization?  <a href="mailto:gverutes@stanford.edu?Subject=Tradeoff!" target="_top">E-mail us</a> for details!</i></li>
+<p></p><i>Would you like to play Tradeoff! with your organization?  <a href="mailto:gverutes@gmail.com?Subject=Interested in Tradeoff! game series" target="_top">E-mail us</a> for details!</i></li>
 <p></p>
 <a class="float right" href="#">top</a>
 <p></p><br>
